Modifications to make the website pixel-perfect to the design

--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "fylo-dark-theme-landing-page",
+  "homepage": "fylo-dark-theme-landing-page",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
